Fix z-index

--- a/src/sass/_layouts.scss
+++ b/src/sass/_layouts.scss
@@ -13,7 +13,7 @@
     position: fixed !important;
     right: 20px;
     bottom: 20px;
-    z-index: 400;
+    z-index: 1200;
   }
 }
 
